Closed Bug 359907 Opened 18 years ago Closed 18 years ago

Bookmarks Aren't Deleted from Bookmarks Menu After Deletion from Bookmarks Manager

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.5

People

(Reporter: thbarnes, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: fixed1.8.1.1)

Attachments

(3 files)

User-Agent:       Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1) Gecko/20061106 Camino/1.1a1+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.1) Gecko/20061106 Camino/1.1a1+

Bookmarks deleted from the bookmarks panel are not deleting from the bookmarks drop-down menu.

I suspect that it may be related to the corrections made in result to bug 359662 https://bugzilla.mozilla.org/show_bug.cgi?id=359662 however I can't confirm this.

Reproducible: Always

Steps to Reproduce:
1. Click 'Show All Bookmarks'
2. Delete A Bookmark
3. Exit Bookmarks Panel
4. Click Bookmarks Drop-Down Menu



Expected Results:  
It's expected that bookmarks deleted from the bookmarks panel would also delete from the bookmarks drop-down menu.

Example appended.
Attached image Screenshot of Bug
You can see where the bookmark has been removed from the bookmarks panel, but still appears in the bookmarks drop-down menu.
Doesn't seem to happen every time.
Attached image Screenshot of Bug 2
Bookmark 'Seven Reasons the 21st Century is Making You Miserable' has been deleted from the bookmarks panel, but still appears in the bookmarks drop-down menu between 'TheStar' and 'strange maps'
I'm not sure how related this is to bug 359662 (other than by the fact that we build the bookmarks menu lazily, which is on purpose).

From what I can see, the menu is being updated correctly when creating, moving, or copying bookmarks, but not when deleting.

This doesn't seem to occur in 1.0.3, so confirming as a regression and tweaking summary to use the standard terminology.
Severity: major → normal
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Summary: Bookmarks Aren't Deleting from Drop-Down Menu After Deletion from Bookmarks Panel → Bookmarks Aren't Deleted from Bookmarks Menu After Deletion from Bookmarks Manager
Target Milestone: --- → Camino1.1
"related to the corrections made in result to bug 359662"

I need to read more carefully.  It's absolutely not that, since that bug hasn't landed yet.
Off the top of my head, hwaara's work to optimize bookmark deletion might be a good first place to look.
Can someone come up with a 100% reproducible & simple testcase for seeing this bug?
This is 100% reproable for me with these steps:

1. Cmd-B.  Make sure you're looking at the bookmarks menu collection
2. Option-drag an existing bookmark to duplicate it.  Examine the bookmarks menu (both bookmarks are visible)
3. Hit the delete key.  Examine bookmarks menu.

What happens: Still displays duplicate bookmarks.
Attached patch fixSplinter Review
This was a latent bug triggered by the fast-deletion changes; the bookmark menu has apparently never handled the childen-changed notification.
Assignee: nobody → stuart.morgan
Status: NEW → ASSIGNED
Attachment #245269 - Flags: review?
Comment on attachment 245269 [details] [diff] [review]
fix

Håkan, can you look at this soonish?
Attachment #245269 - Flags: review?(hwaara)
Comment on attachment 245269 [details] [diff] [review]
fix

Looks good!
Attachment #245269 - Flags: superreview?(mikepinkerton)
Attachment #245269 - Flags: review?(hwaara)
Attachment #245269 - Flags: review+
Attachment #245269 - Flags: review?
Comment on attachment 245269 [details] [diff] [review]
fix

sr=pink
Attachment #245269 - Flags: superreview?(mikepinkerton) → superreview+
Checked in on trunk and MOZILLA_1_8_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: regressionfixed1.8.1.1
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: