Camino only - Bug 359907: Bookmarks aren't deleted from bookmarks menu after deletion from bookmark manager. r=hwaara sr=pink